# auto_pr_tag_ruff

./: .gitignore  README.md  pyproject.toml  test-release-20250627-v2.txt  test-release-20250627-v3.txt  test-release-20250627.txt
.claude/: settings.local.json
.github/scripts/: README.md  ruff-diff-check.py
.github/workflows/: auto-pr-tag.yml  ci.yml  lab-ruff-check.yml
src/auto_pr_tag_ruff/: __init__.py  main.py
tests/: __init__.py  test_main.py
